--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "^3.4.4"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.4.0",
     "@vkontakte/icons": "^1.51.0",
     "@vkontakte/vk-bridge": "^2.3.0",
     "@vkontakte/vk-miniapps-deploy": "0.0.17",
@@ -29,9 +30,17 @@
     "eruda": "^2.4.1",
     "eruda-code": "^2.0.0",
     "eruda-dom": "^2.0.0",
+    "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
-    "react-dom": "^16.14.0"
+    "react-dom": "^16.14.0",
+    "react-infinite-scroll-component": "^5.1.0",
+    "react-infinite-scroll-hook": "^3.0.0",
+    "react-lazyload": "^3.1.0",
+    "react-redux": "^7.2.2",
+    "react-window": "^1.8.6",
+    "react-window-infinite-loader": "^1.0.5",
+    "redux": "^4.0.5"
   },
   "browserslist": {
     "production": [
