--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^16.14.0",
     "react-infinite-scroll-component": "^5.1.0",
     "react-infinite-scroll-hook": "^3.0.0",
+    "react-infinite-scroller": "^1.2.4",
     "react-lazyload": "^3.1.0",
     "react-redux": "^7.2.2",
     "react-window": "^1.8.6",
