--- a/package.json
+++ b/package.json
@@ -34,13 +34,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "react-infinite-scroll-component": "^5.1.0",
-    "react-infinite-scroll-hook": "^3.0.0",
-    "react-infinite-scroller": "^1.2.4",
-    "react-lazyload": "^3.1.0",
+    "react-infinite-scroller": "^1.2.4", ,
     "react-redux": "^7.2.2",
-    "react-window": "^1.8.6",
-    "react-window-infinite-loader": "^1.0.5",
     "redux": "^4.0.5"
   },
   "browserslist": {
