--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "react-infinite-scroller": "^1.2.4", ,
+    "react-infinite-scroller": "^1.2.4",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5"
   },
