--- a/package.json
+++ b/package.json
@@ -2,19 +2,21 @@
   "name": "test-vk-mini-app",
   "version": "1.0.0",
   "description": "",
+  "homepage": "https://avrorapolnareff.github.io/test-vk-mini-app",
   "main": "index.js",
   "scripts": {
     "start": "cross-env PORT=10888 HTTPS=true react-scripts start",
     "build": "react-scripts build",
     "tunnel": "vk-tunnel --insecure=1 --http-protocol=https --ws-protocol=wss --host=localhost --port=10888",
     "predeploy": "npm run build",
-    "deploy": "vk-miniapps-deploy"
+    "deploy": "gh-pages -b pages -d build"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "devDependencies": {
     "cross-env": "^5.2.1",
+    "gh-pages": "^3.1.0",
     "react-hot-loader": "^4.13.0",
     "react-scripts": "^3.4.4"
   },
